# wingzero-trading-bot

./: MT4_BRIDGE_SETUP.md  MT5_BRIDGE_SETUP.md  PHASE7_INTEGRATION_GUIDE.md  PORTFOLIO_OPTIMIZATION_FIXES.md  README.md  REAL_TESTS_IMPLEMENTATION_SUMMARY.md  WINDSURF_ASSISTANCE_REPORT.md  WINDSURF_TEST_FIXES_SUMMARY.md  WING_ZERO_INTEGRATION_COMPLETE.md  WingZero_RestAPI_Fixed.mq5  capacitor.config.ts  index.html  jest.config.js  mt5_bridge_server.py  package-lock.json  package.json  requirements.txt  start_mt5_bridge.bat  start_mt5_bridge.sh  test_phase7_integration.ts  tsconfig.test.json  vite.config.ts
docs/: CURSOR_DEVELOPMENT_ROADMAP.md  DETAILED_CONTINGENCY_PLANS.md  WINDSURF_DEVELOPMENT_ROADMAP.md
scripts/: fix-windsurf-tests.sh  test-all-phases.sh  test-phase3-integration.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/hooks/: useAIBrain.ts  useAccountData.ts  useAuth.ts  useAutoStartTrading.ts  useBrokerAPI.ts  useCloudEngine.ts  useLocalStorage.ts  useNotifications.ts  useRealTimeNotifications.ts  useSecureAPI.ts  useSupabasePositions.ts  useSupabaseTrades.ts  useTradingEngine.ts  useWebSocket.ts  useWingZeroAPI.ts  useWingZeroPositions.ts
src/pages/: Auth.tsx  Index.tsx  SAWDashboard.tsx  Settings.tsx  WingZeroDashboard.tsx
src/services/: AISignalGenerator.ts  AdvancedMLEngine.ts  AdvancedPortfolioService.ts  AdvancedRiskManager.ts  AdvancedRiskModelService.ts  AdvancedStrategyService.ts  AntifraudDetectionService.ts  AuditTrailService.ts  BlockchainIntegrationService.ts  BrokerManagerService.ts  MT4Bridge.ts  (+53 more)
supabase/: config.toml
(+143 files in other folders)
