[package]
name = "wing-zero-x-saw"
version = "1.0.0"
description = "Wing Zero X SAW - Advanced Trading Platform"
authors = ["Wing Zero Team"]
license = "MIT"
repository = "https://github.com/wingzero/wing-zero-x-saw"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]